<resources>
    <string name="app_name">MultiCalculator</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="price_text_view">Price:</string>
    <string name="tip_text_view">Tip:</string>
    <string name="total_text_view">Total:</string>
    <string name="enter_price">Enter the price.</string>
    <string name="dollar_sign">$</string>
    <string name="percent_sign">%</string>
    <string name="before_tax">Cost:</string>
    <string name="costWithTaxButton">CALCULATE</string>
    <string name="taxView">Tax:</string>
    <string name="calculator2">BMI Calculator</string>
    <string name="calculator3">Length Calculator</string>
    <string name="calculator4">Tax Calculator</string>
    <string name="height_in_feet">Height(Feet):</string>
    <string name="height_in_inches">Height(Inches):</string>
    <string name="weight">Weight(Pounds)</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="title_activity_length_calculator">Length Calculator</string>
    <string name="tab_text_1">Feet To Meters</string>
    <string name="tab_text_2">Inches to Feet</string>
    <string name="tab_text_3">Centimeters to Meters</string>
    <string name="action_settings">Settings</string>
    <string name="meters">Meters</string>
    <string name="zero">0</string>
    <string name="to">To</string>
    <string name="centimeters">Centimeters</string>

</resources>
