<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/constraintLayout"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".FeetToMetersFragment">

    <TextView
            android:text="@string/feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="24sp"
            android:id="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView13" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.34"/>
    <TextView
            android:text="@string/meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/textView12" android:layout_marginTop="8dp"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.68"/>
    <EditText
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextFeet"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:text="@string/zero"/>
    <TextView
            android:text="@string/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:id="@+id/textView13" app:layout_constraintStart_toEndOf="@+id/editTextFeet"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/editTextMeters"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextMeters" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/editTextFeet"/>
    <EditText
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextMeters"
            android:textSize="24sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:text="@string/zero"/>
</android.support.constraint.ConstraintLayout>