<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TipCalculatorActivity">

    <TextView
            android:text="@string/price_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/priceTextView"
            android:textSize="36sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/priceEditText"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/tip_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tipTextView"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintBaseline_toBaselineOf="@+id/tipTextView2"/>
    <TextView
            android:text="@string/total_text_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/totalTextView"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintBaseline_toBaselineOf="@+id/totalTextView2"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/totalTextView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipTextView2"
            android:text="$"
            android:textSize="36sp"
            app:layout_constraintStart_toEndOf="@+id/tipTextView" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/priceEditText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTextView2"
            android:text="$"
            android:textSize="36sp"
            app:layout_constraintStart_toEndOf="@+id/totalTextView"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tipTextView2"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/priceEditText"
            android:hint="@string/enter_price"
            android:textSize="24sp" app:layout_constraintStart_toEndOf="@+id/priceTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginStart="16dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>