<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".CentimetersToMetersFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/centimeters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp"
                android:id="@+id/textView4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/textView6"/>
        <TextView
                android:text="@string/meters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp"
                android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp"
                android:id="@+id/textView6" app:layout_constraintEnd_toStartOf="@+id/editTextFeet"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/editTextInches"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/editTextInches" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextFeet"/>
        <EditText
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textSize="24sp"
                android:id="@+id/editTextInches" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:text="0"/>
        <EditText
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textSize="24sp"
                android:id="@+id/editTextFeet" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" android:text="0"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>